--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ repositories {
 	mavenCentral()
 }
 
+jar.archiveName="phone"
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
