--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ String imageName = "${dockerHubUsernameProperty}/spring-boot-api-example:$versio
 docker {
 	name imageName
 	files "build/libs/${bootJar.archiveFileName.get()}"
-	buildArgs([JAR_FILE: bootJar. 	.get()])
+	buildArgs([JAR_FILE: bootJar.archiveFileName.get()])
 }
 
 dockerRun {
